optimo para desafio SASS 2+SEO

--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Somos un comercio de productos regionales ubicado en la ciudad de Olavarria con mas de 10 años de servicio al cliente de campo y a quienes buscan qué regalar a sus familiares y amigos">
+    <meta name="keywords" content="productos regionales, equipos de mate, aire de campo, campo, cuero, soga, regaleria, bijouterie, talabarteria, alpargatas, bombachas, mate, cuchillo, gaucho, paisano, tradicion, caballo, llaveros, camisas, monturas, olavarria, bombilla, termo, sombreros, perchero, regalos, boinas,galeria">
     <link rel="shortcut icon" href="../imagenes/logos/logo_small_icon_only_inverted.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
