terminacion de pagina GRID

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -46,7 +46,7 @@
             </form>
         </div>
         <div class="contenedorFooter">
-            <div class="contenedorRedes">
+            <div class="contenedor__redes">
                 <a href="https://www.instagram.com/regionalesairesdecampo/" target="_blank"><img src="../imagenes/logos/instagram2.png" alt="red social instagram"></a>
                 <a href="https://www.facebook.com/mariela.villa.37853" target="_blank"><img src="../imagenes/logos/facebook2.png" alt="red social facebook"></a>
             </div>
@@ -54,17 +54,17 @@
                 <div class="contenedorH3">
                     <h3 class="encabezado--newsletter animate__animated animate__pulse">Suscribite a nuestro Newsletter y recibí descuentos exclusivos!</h3>
                 </div>
-                <div class="suscripcion">
-                    <input class="dataSuscripcion" type="text" name="nombre" placeholder="Nombre"/>
+                <div class="contenedor__suscripcion">
+                    <input class="data--Suscripcion" type="text" name="nombre" placeholder="Nombre"/>
                 </div>
-                <div class="suscripcion">
-                    <input class="dataSuscripcion" type="email" name="email" placeholder="E-mail"/>
+                <div class="contenedor__suscripcion">
+                    <input class="data--Suscripcion" type="email" name="email" placeholder="E-mail"/>
                 </div>
-                <div class="suscripcionBtn">
-                    <button type="submit" class="btn btn-primary input__suscribirse">Suscribirse</button>
+                <div class="contenedor__boton">
+                    <button type="submit" class="btn btn-primary input--suscribirse">Suscribirse</button>
                 </div>
             </div>
-            <div class="contendor__copyright">
+            <div class="contenedor__pie">
                 <div class="copyright">
                     <p class="texto--copyright">Copyright. Aires de campo - 2021. Todos los derechos reservados.</p>
                 </div>
