optimizacion del shop y nosotros

--- a/paginas/webshop.html
+++ b/paginas/webshop.html
@@ -43,7 +43,7 @@
                 <label class="estiloFiltro"for="filtro">Materiales</label>
                 <input type="radio" name="filtro"/>
                 <label class="estiloFiltro"for="filtro">Todo</label>
-                <input type="radio" name="filtro"/>
+                <input type="radio" name="filtro" checked/>
                 <a class="filtroMobile" href="../paginas/webshop.html"><img src="../imagenes/logos/filtrar.png" alt="filtro"></a>
             </div>
             <div class=" col-xl-1 col-1 col-sm-1 col-lg-1 contenedor_carrito">
