optimo para tercer entrega

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="row header">
             <nav class="navbar navbar-expand-lg navbar-light estilosNav">
                 <div class="login">
-                    <a class="registroMobile" href="https://www.google.com.ar" target="_blank"><img class="simboloLogin" src="./imagenes/logos/iniciar-sesion.png" alt="login"></a>
-                    <a class="navbar-brand registro" href="https://www.google.com.ar" target="_blank">Iniciar sesion</a>
-                    <a class="navbar-brand registro" href="https://www.google.com.ar" target="_blank">Registrarse</a>
+                    <a class="registroMobile" href="https://docs.google.com/document/d/1QID_80kv9aqAVNel1hzZVw6y4QFAbA9N5OIYnDeb6i4/edit?usp=sharing" target="_blank"><img class="simboloLogin" src="./imagenes/logos/iniciar-sesion.png" alt="login"></a>
+                    <a class="navbar-brand registro" href="https://docs.google.com/document/d/1y3cci1W2XSbl6P4jodmjnfXIf-JJgqhmiP_KsDsA0EE/edit?usp=sharing" target="_blank">Iniciar sesion</a>
+                    <a class="navbar-brand registro" href="https://docs.google.com/document/d/1QID_80kv9aqAVNel1hzZVw6y4QFAbA9N5OIYnDeb6i4/edit?usp=sharing" target="_blank">Registrarse</a>
                 </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
