arreglo de clases y detalles

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a class="navbar-brand registro" href="https://docs.google.com/document/d/1y3cci1W2XSbl6P4jodmjnfXIf-JJgqhmiP_KsDsA0EE/edit?usp=sharing" target="_blank">Iniciar sesion</a>
                     <a class="navbar-brand registro" href="https://docs.google.com/document/d/1QID_80kv9aqAVNel1hzZVw6y4QFAbA9N5OIYnDeb6i4/edit?usp=sharing" target="_blank">Registrarse</a>
                 </div>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler botonHambur" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse estilosNavbar" id="navbarNavAltMarkup">
@@ -47,7 +47,7 @@
                 <a href="https://www.facebook.com/mariela.villa.37853" target="_blank"><img src="imagenes/logos/facebook2.png" alt="red social facebook"></a>
             </div>
             <div class="col-xl-3 col-12 col-sm-12 col-lg-3">
-                <h3 class="encabezado--newsletter animate__animated animate__pulse">Suscribite a nuestro Newsletter y recibí descuentos exclusivos!</h3>
+                <h3 class="encabezadoNewsletter animate__animated animate__pulse">Suscribite a nuestro Newsletter y recibí descuentos exclusivos!</h3>
             </div>
             <div class="col-xl-3 col-12 col-sm-12 col-lg-3 suscripcion">
                 <input class="dataSuscripcion" type="text" name="nombre" placeholder="Nombre"/>
@@ -56,14 +56,15 @@
                 <input class="dataSuscripcion" type="email" name="email" placeholder="E-mail"/>
             </div>
             <div class="col-xl-3 col-12 col-sm-12 col-lg-3 suscripcion">
-                <button type="submit" class="btn btn-primary input__suscribirse">Suscribirse</button>
+                <button type="submit" class="btn btn-primary inputSuscripcion">Suscribirse</button>
             </div>
             <div class="col-xl-11 col-11 col-sm-11 col-lg-11 copyright">
-                <p class="texto--copyright">Copyright. Aires de campo - 2021. Todos los derechos reservados.</p>
+                <p class="textoCopyright">Copyright. Aires de campo - 2021. Todos los derechos reservados.</p>
             </div>
-            <div class="col-xl-1 col-1 col-sm-1 col-lg-1 contenedor__whatsapp">
+            <div class="col-xl-1 col-1 col-sm-1 col-lg-1 fixedWhatsapp">
                 <a href="https://api.whatsapp.com/send/?phone=541122501309" target="_blank">
-                    <img src="./imagenes/logos/whatsapp2.png" alt="whatsapp"></a>
+                    <img src="./imagenes/logos/whatsapp2.png" alt="whatsapp">
+                </a>
             </div>
         </div>
     </div>
