--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -14,7 +14,7 @@
     <title>Contacto / Aires de campo</title>
 </head>
 <body>
-    <div class="contenedor__contacto">
+    <div class="contenedorContacto">
         <div class="headerContacto header">
             <nav class="navbar navbar-expand-lg navbar-light estilosNav">
                 <div class="login">
@@ -34,13 +34,13 @@
                 </div>
             </nav>
         </div>
-        <div class="contenido__contacto">
-                <h2 class="encabezadoContacto">Conocé nuestro local</h2>
+        <div class="contactoUbicacion">
+                <h2 class="encabezadosContacto">Conocé nuestro local</h2>
                 <iframe class="iframeMaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3190.8153369633014!2d-60.31864968415989!3d-36.89476568978891!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959445cfc8a5cc8d%3A0x3fa60fb5925c65c0!2sNecochea%203218%2C%20B7400%20Olavarr%C3%ADa%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1634916084275!5m2!1ses!2sar" loading="lazy"></iframe>
         </div>
-        <div class="contactanos--consultas">
-            <h2 class="encabezadoContacto">Envianos tu consulta</h2>
-            <form class="form--consultas">
+        <div class="contactoConsultas">
+            <h2 class="encabezadosContacto">Envianos tu consulta</h2>
+            <form class="consultasForm">
                 <input class="dataContactanos" type="text" name="Nombre" placeholder="Nombre"/>
                 <input class="dataContactanos" type="email" name="Email" placeholder="E-mail"/>
                 <textarea class="textoContactanos"maxlength="200" rows="4" cols="15" placeholder="Consulta"></textarea>
@@ -48,29 +48,29 @@
             </form>
         </div>
         <div class="contenedorFooter">
-            <div class="contenedor__redes">
+            <div class="contenedorFooter__redes">
                 <a href="https://www.instagram.com/regionalesairesdecampo/" target="_blank"><img src="../imagenes/logos/instagram2.png" alt="red social instagram"></a>
                 <a href="https://www.facebook.com/mariela.villa.37853" target="_blank"><img src="../imagenes/logos/facebook2.png" alt="red social facebook"></a>
             </div>
-            <div class="contenedor__newsletter">
-                <div class="contenedorH3">
-                    <h3 class="encabezado--newsletter animate__animated animate__pulse">Suscribite a nuestro Newsletter y recibí descuentos exclusivos!</h3>
+            <div class="contenedorFooter__newsletter">
+                <div class="newsletter__h3">
+                    <h3 class="h3--encabezado animate__animated animate__pulse">Suscribite a nuestro Newsletter y recibí descuentos exclusivos!</h3>
                 </div>
-                <div class="contenedor__suscripcion">
-                    <input class="data--Suscripcion" type="text" name="nombre" placeholder="Nombre"/>
+                <div class="contenedorFooter__suscripcion">
+                    <input class="suscripcion--data" type="text" name="nombre" placeholder="Nombre"/>
                 </div>
-                <div class="contenedor__suscripcion">
-                    <input class="data--Suscripcion" type="email" name="email" placeholder="E-mail"/>
+                <div class="contenedorFooter__suscripcion">
+                    <input class="suscripcion--data" type="email" name="email" placeholder="E-mail"/>
                 </div>
-                <div class="contenedor__boton">
-                    <button type="submit" class="btn btn-primary input--suscribirse">Suscribirse</button>
+                <div class="contenedorFooter__boton">
+                    <button type="submit" class="btn btn-primary boton--suscripcion">Suscribirse</button>
                 </div>
             </div>
-            <div class="contenedor__pie">
+            <div class="contenedorFooter__pie">
                 <div class="copyright">
-                    <p class="texto--copyright">Copyright. Aires de campo - 2021. Todos los derechos reservados.</p>
+                    <p class="textoCopyright">Copyright. Aires de campo - 2021. Todos los derechos reservados.</p>
                 </div>
-                <div class="contenedor__whatsapp">
+                <div class="fixedWhatsapp">
                     <a href="https://api.whatsapp.com/send/?phone=541122501309" target="_blank">
                         <img src="../imagenes/logos/whatsapp2.png" alt="whatsapp"></a>
                 </div>
