--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -35,20 +35,20 @@
             </nav>
         </div>
         <div class="row contenidoNosotros">
-            <div class="col-xl-6 col-sm-12 col-12 col-lg-6 historia1">
-                <h2 class="historia--encabezado">Nuestras Raices</h2>
-                <p class="historia--parrafo">El comienzo fue en el año XXXX donde decidimos llevar adelante este emprendimiento que surgió como idea de negocio de venta de ropa pero que al poco tiempo no basto sólo con vestir a cada gaucho que se acercaba a nuestro local o nos conocía en los estand de ventas en los festivales sino que también captamos otras necesidades como lo son los juegos de montura para los caballos, cuchillos artesanales, productos trabajados en cuero, herramientas y accesorios para el talabartero, mates, llaveros y los más diversos productos regionales que se transformaron en el regalo ideal para innumerables ocasiones. Poco a poco nuestro primer local fue tomando forma y se fueron agregando repisas, percheros y estantes para siempre estar a la vanguardia y contar con stock acorde a las necesidades de nuestros clientes.....    </p>
+            <div class="col-xl-6 col-sm-12 col-12 col-lg-6 nosotrosPrincipio">
+                <h2 class="encabezadosNosotros">Nuestras Raices</h2>
+                <p class="parrafosNosotros">El comienzo fue en el año XXXX donde decidimos llevar adelante este emprendimiento que surgió como idea de negocio de venta de ropa pero que al poco tiempo no basto sólo con vestir a cada gaucho que se acercaba a nuestro local o nos conocía en los estand de ventas en los festivales sino que también captamos otras necesidades como lo son los juegos de montura para los caballos, cuchillos artesanales, productos trabajados en cuero, herramientas y accesorios para el talabartero, mates, llaveros y los más diversos productos regionales que se transformaron en el regalo ideal para innumerables ocasiones. Poco a poco nuestro primer local fue tomando forma y se fueron agregando repisas, percheros y estantes para siempre estar a la vanguardia y contar con stock acorde a las necesidades de nuestros clientes.....    </p>
             </div>
-            <div class="col-xl-6 col-sm-12 col-12 col-lg-6 imagenes1">
-                <img class="imgArriba" src="../imagenes/imagenes_nosotros/antes2.jpg" alt="frente con bandera">
-                <img class="imgArriba"src="../imagenes/imagenes_nosotros/antes.jpg" alt="vidriera">
+            <div class="col-xl-6 col-sm-12 col-12 col-lg-6 imagenesPrincipio">
+                <img class="imgPrincipio" src="../imagenes/imagenes_nosotros/antes2.jpg" alt="frente con bandera">
+                <img class="imgPrincipio"src="../imagenes/imagenes_nosotros/antes.jpg" alt="vidriera">
             </div>
-            <div class="col-xl-6 col-sm-12 col-12 col-lg-6 imagenes2">
-                <img class="imgAbajo"src="../imagenes/imagenes_nosotros/frente.jpg" alt="frente negocio actual">
+            <div class="col-xl-6 col-sm-12 col-12 col-lg-6 imagenesActualidad">
+                <img class="imgActualidad"src="../imagenes/imagenes_nosotros/frente.jpg" alt="frente negocio actual">
             </div>
-            <div class="col-xl-6 col-sm-12 col-12 col-lg-6 historia2">
-                <h2 class="historia--encabezado">...continuacion de la historia</h2>
-                <p class="historia--parrafo">Al igual que una familia fuimos creciendo, de tal forma que tuvimos que dejar nuestra antigua cochera transformada en local de ventas para pasar a un lugar mas amplio y comodo para la vista y el acceso de nuestros clientes, donde ya llevamos 3 años. No fue facil sortear cada obstaculo que se nos interpuso en el crecimiento y expansion de nuestro modesto emprendimiento; el apoyo de amigos, familiares y , sobre todo, nuestros clientes hizo que tomemos fuerza y nunca bajemos los brazos para cada dia trabajar por y para ellos....  </p>
+            <div class="col-xl-6 col-sm-12 col-12 col-lg-6 nosotrosActualidad">
+                <h2 class="encabezadosNosotros">...continuacion de la historia</h2>
+                <p class="parrafosNosotros">Al igual que una familia fuimos creciendo, de tal forma que tuvimos que dejar nuestra antigua cochera transformada en local de ventas para pasar a un lugar mas amplio y comodo para la vista y el acceso de nuestros clientes, donde ya llevamos 3 años. No fue facil sortear cada obstaculo que se nos interpuso en el crecimiento y expansion de nuestro modesto emprendimiento; el apoyo de amigos, familiares y , sobre todo, nuestros clientes hizo que tomemos fuerza y nunca bajemos los brazos para cada dia trabajar por y para ellos....  </p>
             </div>
         </div>
         <div class="row footer footerPages">
@@ -57,7 +57,7 @@
                 <a href="https://www.facebook.com/mariela.villa.37853" target="_blank"><img src="../imagenes/logos/facebook2.png" alt="red social facebook"></a>
             </div>
             <div class="col-xl-3 col-sm-12 col-12 col-lg-3">
-                <h3 class="encabezado--newsletter animate__animated animate__pulse">Suscribite a nuestro Newsletter y recibí descuentos exclusivos!</h3>
+                <h3 class="encabezadoNewsletter animate__animated animate__pulse">Suscribite a nuestro Newsletter y recibí descuentos exclusivos!</h3>
             </div>
             <div class="col-xl-3 col-sm-12 col-12 col-lg-3 suscripcion">
                 <input class="dataSuscripcion" type="text" name="nombre" placeholder="Nombre"/>
@@ -66,14 +66,15 @@
                 <input class="dataSuscripcion" type="email" name="email" placeholder="E-mail"/>
             </div>
             <div class="col-xl-3 col-sm-12 col-12 col-lg-3 suscripcion">
-                <button type="submit" class="btn btn-primary input__suscribirse">Suscribirse</button>
+                <button type="submit" class="btn btn-primary inputSuscripcion">Suscribirse</button>
             </div>
             <div class="col-xl-11 col-sm-11 col-11 col-lg-11 copyright">
-                <p class="texto--copyright">Copyright. Aires de campo - 2021. Todos los derechos reservados.</p>
+                <p class="textoCopyright">Copyright. Aires de campo - 2021. Todos los derechos reservados.</p>
             </div>
-            <div class="col-xl-1 col-sm-1 col-1 col-lg-1 contenedor__whatsapp">
+            <div class="col-xl-1 col-sm-1 col-1 col-lg-1 fixedWhatsapp">
                 <a href="https://api.whatsapp.com/send/?phone=541122501309" target="_blank">
-                    <img src="../imagenes/logos/whatsapp2.png" alt="whatsapp"></a>
+                    <img src="../imagenes/logos/whatsapp2.png" alt="whatsapp">
+                </a>
             </div>
         </div>
     </div>
