--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -73,28 +73,29 @@
             </div>
         </div>
         <div class="row footer footerPages">
-            <div class="col-xl-12 col-12 col-sm-12 col-lg-12 contenedorRedes">
+            <div class="col-xl-12 col-sm-12 col-12 col-lg-12 contenedorRedes">
                 <a href="https://www.instagram.com/regionalesairesdecampo/" target="_blank"><img src="../imagenes/logos/instagram2.png" alt="red social instagram"></a>
                 <a href="https://www.facebook.com/mariela.villa.37853" target="_blank"><img src="../imagenes/logos/facebook2.png" alt="red social facebook"></a>
             </div>
-            <div class="col-xl-3 col-12 col-sm-12 col-lg-3">
-                <h3 class="encabezado--newsletter animate__animated animate__pulse">Suscribite a nuestro Newsletter y recibí descuentos exclusivos!</h3>
+            <div class="col-xl-3 col-sm-12 col-12 col-lg-3">
+                <h3 class="encabezadoNewsletter animate__animated animate__pulse">Suscribite a nuestro Newsletter y recibí descuentos exclusivos!</h3>
             </div>
-            <div class="col-xl-3 col-12 col-sm-12 col-lg-3 suscripcion">
+            <div class="col-xl-3 col-sm-12 col-12 col-lg-3 suscripcion">
                 <input class="dataSuscripcion" type="text" name="nombre" placeholder="Nombre"/>
             </div>
             <div class="col-xl-3 col-sm-12 col-12 col-lg-3 suscripcion">
                 <input class="dataSuscripcion" type="email" name="email" placeholder="E-mail"/>
             </div>
             <div class="col-xl-3 col-sm-12 col-12 col-lg-3 suscripcion">
-                <button type="submit" class="btn btn-primary input__suscribirse">Suscribirse</button>
+                <button type="submit" class="btn btn-primary inputSuscripcion">Suscribirse</button>
             </div>
             <div class="col-xl-11 col-sm-11 col-11 col-lg-11 copyright">
-                <p class="texto--copyright">Copyright. Aires de campo - 2021. Todos los derechos reservados.</p>
+                <p class="textoCopyright">Copyright. Aires de campo - 2021. Todos los derechos reservados.</p>
             </div>
-            <div class="col-xl-1 col-sm-1 col-1 col-lg-1 contenedor__whatsapp">
+            <div class="col-xl-1 col-sm-1 col-1 col-lg-1 fixedWhatsapp">
                 <a href="https://api.whatsapp.com/send/?phone=541122501309" target="_blank">
-                    <img src="../imagenes/logos/whatsapp2.png" alt="whatsapp"></a>
+                    <img src="../imagenes/logos/whatsapp2.png" alt="whatsapp">
+                </a>
             </div>
         </div>
     </div>
