--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="imagenes/logos/logo_small_icon_only_inverted.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Josefin+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="CSS/elstylo.css">
     <title>Aires de campo</title>
@@ -38,7 +39,7 @@
         </div>
         <div class="row mainHome">
             <div class="col-xl-12 col-12 col-sm-12 col-lg-12 estilosLogo">
-                <img src="./imagenes/logos/logoHome.png" alt="Aires de campo">
+                <h1>Aires de campo</h1>
             </div>
         </div>
         <div class="row footer">
